v1.1.0/modules/schema/pages/class/SwitchingStep.adoc
= `SwitchingStep`
:toclevels: 4


+++Atomic switching step; can be part of a switching step group, or part of a switching plan.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SwitchingStep`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`SwitchingStep`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<RevisionHistory,`RevisionHistory`>>
//| [[slots_table.RevisionHistory]]<<RevisionHistory,`RevisionHistory`>>
| 1 +
xref::class/RevisionHistory.adoc[`RevisionHistory`]
| _n/a_
| _n/a_

| <<SwitchingAction,`SwitchingAction`>>
//| [[slots_table.SwitchingAction]]<<SwitchingAction,`SwitchingAction`>>
| 1 +
xref::class/SwitchingAction.adoc[`SwitchingAction`]
| +++The switching action that is associated to the switching step.+++
| _n/a_

| <<SwitchingStepGroup,`SwitchingStepGroup`>>
//| [[slots_table.SwitchingStepGroup]]<<SwitchingStepGroup,`SwitchingStepGroup`>>
| 0..1 +
xref::class/SwitchingStepGroup.adoc[`SwitchingStepGroup`]
| +++The switching step group that contains the switching steps.+++
| _n/a_

| <<isFreeSequence,`isFreeSequence`>>
//| [[slots_table.isFreeSequence]]<<isFreeSequence,`isFreeSequence`>>
| 1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++For a step, if isFreeSequence is set to false or is not specified, all of the steps in the group must be executed in the...+++
| _n/a_

| <<sequenceNumber,`sequenceNumber`>>
//| [[slots_table.sequenceNumber]]<<sequenceNumber,`sequenceNumber`>>
| 1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Order of this activity in the sequence of activities within the switching plan.+++
| _n/a_

| <<subStepSequenceNumber,`subStepSequenceNumber`>>
//| [[slots_table.subStepSequenceNumber]]<<subStepSequenceNumber,`subStepSequenceNumber`>>
| 1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Supports compound switching steps that are made up of several sub steps.+++
| _n/a_
|===

'''


//[discrete]
[#isFreeSequence]
=== `isFreeSequence`
+++For a step, if isFreeSequence is set to false or is not specified, all of the steps in the group must be executed in the order defined by the sequenceNumber attribute. The sequenceNumber for a step has a different meaning when there are two or more sequential steps that have the isFreeSequence attribute set to true. Execution must still be performed in sequenceNumber order until a set of two or more steps that have isFreeSequence set to true is encountered. In this case, these steps can be executed in any sequence, until a step is encountered that has isFreeSequence set to false. All of the steps preceding this step must be executed before the step can be executed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingStep.isFreeSequence`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isFreeSequence,&#10548;>>
--
////


//[discrete]
[#RevisionHistory]
=== `RevisionHistory`



[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingStep.RevisionHistory`
| Cardinality
| 1
| Type
| xref::class/RevisionHistory.adoc[`RevisionHistory`]


|===

////
[.text-left]
--
<<slots_table.RevisionHistory,&#10548;>>
--
////


//[discrete]
[#sequenceNumber]
=== `sequenceNumber`
+++Order of this activity in the sequence of activities within the switching plan.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingStep.sequenceNumber`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.sequenceNumber,&#10548;>>
--
////


//[discrete]
[#subStepSequenceNumber]
=== `subStepSequenceNumber`
+++Supports compound switching steps that are made up of several sub steps.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingStep.subStepSequenceNumber`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.subStepSequenceNumber,&#10548;>>
--
////


//[discrete]
[#SwitchingAction]
=== `SwitchingAction`
+++The switching action that is associated to the switching step.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingStep.SwitchingAction`
| Cardinality
| 1
| Type
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

////
[.text-left]
--
<<slots_table.SwitchingAction,&#10548;>>
--
////


//[discrete]
[#SwitchingStepGroup]
=== `SwitchingStepGroup`
+++The switching step group that contains the switching steps.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingStep.SwitchingStepGroup`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingStepGroup.adoc[`SwitchingStepGroup`]


|===

////
[.text-left]
--
<<slots_table.SwitchingStepGroup,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/RevisionHistory.adoc[`RevisionHistory`] | xref::class/RevisionHistory.adoc#SwitchingStep[`SwitchingStep`]



| xref::class/SwitchingAction.adoc[`SwitchingAction`] | xref::class/SwitchingAction.adoc#SwitchingStep[`SwitchingStep`]



| xref::class/SwitchingStepGroup.adoc[`SwitchingStepGroup`] | xref::class/SwitchingStepGroup.adoc#SwitchingStep[`SwitchingStep`]


|===

